--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "test": "jest",
     "lint": "eslint src",
     "build": "babel src -d lib --ignore '*.test.js'",
-    "watch": "babel --watch src -d lib --ignore '*.test.js'"
+    "watch": "babel --watch src -d lib --ignore '*.test.js'",
+    "test-gen": "rm -rf ./tmp && npm run build && ./lib/index.js  https://demo.api-platform.com ./tmp"
   },
   "bin": {
     "api-platform-generate-crud": "./lib/index.js"
